# BazUpgrade

./: .gitignore  BazUpgrade.cpp  CMakeLists.txt  CMakePresets.json  README.md  sonar-project.properties
.github/workflows/: build.yml
controllers/: AssetSelectorContainsString.cpp  AssetSelectorContainsString.hpp  AutoUpgraderLaunch.cpp  AutoUpgraderLaunch.hpp  AutoUpgraderUnzip.cpp  AutoUpgraderUnzip.hpp  CMakeLists.txt  DownloaderSelective.cpp  DownloaderSelective.hpp  LauncherStd.cpp  LauncherStd.hpp  ReleaseSelectorOrdered.cpp  ReleaseSelectorOrdered.hpp  UnzipperElzip.cpp  UnzipperElzip.hpp
controllers/test/: AssetSelectorContainsStringTest.cpp  AutoUpgraderLaunchTest.cpp  AutoUpgraderUnzipTest.cpp  CMakeLists.txt  DownloaderSelectiveTest.cpp  ReleaseSelectorOrderedTest.cpp
curl/: CMakeLists.txt  CurlContext.cpp  CurlContext.hpp  DataCallbacks.cpp  DataCallbacks.hpp  HttpClientCurl.cpp  HttpClientCurl.hpp
instantiations/: BazUpgradeGitHub.hpp  CMakeLists.txt  TracingBazUpgradeGitHub.hpp
interfaces/: ApiClient.hpp  Asset.hpp  AssetSelector.hpp  AutoUpgrader.hpp  CMakeLists.txt  Downloader.hpp  HttpClient.hpp  Launcher.hpp  Release.hpp  ReleaseSelector.hpp  ResponseParser.hpp  Unzipper.hpp
interfaces/mocks/: ApiClientMock.hpp  AssetSelectorMock.hpp  AutoUpgraderMock.hpp  CMakeLists.txt  DownloaderMock.hpp  HttpClientMock.hpp  LauncherMock.hpp  ReleaseSelectorMock.hpp  ResponseParserMock.hpp  UnzipperMock.hpp
tracing/: CMakeLists.txt  TracingApiClient.cpp  TracingApiClient.hpp  TracingAssetSelector.cpp  TracingAssetSelector.hpp  TracingReleaseSelector.cpp  TracingReleaseSelector.hpp
util/: CMakeLists.txt  FILEWrapper.cpp  FILEWrapper.hpp  JsonHelper.cpp  JsonHelper.hpp
vendors/: ApiClientGitHub.cpp  ApiClientGitHub.hpp  CMakeLists.txt  ResponseParserGitHub.cpp  ResponseParserGitHub.hpp
vendors/test/: ApiClientGitHubTest.cpp  CMakeLists.txt  ResponseParserGitHubTest.cpp  ResponsesGitHub.hpp
